form white space fixed.

--- a/src/postcss/modules/contact.css
+++ b/src/postcss/modules/contact.css
@@ -21,6 +21,7 @@
   .form {
     padding: 10px;
     padding-top: 60px;
+    padding-bottom: 60px;
     background: $offwhite;
     label,
     input {
